--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,102 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+}
+
+body {
+  font-family: sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+  display: flex;
+  flex-direction: column;
+}
+
+.header-container {
+  color: aqua;
+  padding: 20px 0;
+  font-size: 50px;
+}
+
+.form-container {
+  background-color: rgb(154, 252, 255);
+  border: 3px solid rgb(100, 58, 58);
+  padding: 60px;
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  /* placeholder */
+}
+
+.all-messages-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+.all-messages-list {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  list-style: none;
+}
+
+.all-messages-list-item,
+.one-message {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  column-gap: 2rem;
+}
+
+.all-messages-list-item-label-from,
+.all-messages-list-item-label-message,
+.one-message-label-from,
+.one-message-label-message {
+  color: red;
+}
+
+.all-messages-list-item-from,
+.all-messages-list-item-message,
+.one-message-from,
+.one-message-message {
+  color: blue;
+}
+
+button {
+  border: none;
+  border-radius: 20px;
+  padding: 8px 12px;
+  background-color: #7fffd4;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #80d2ff;
+}
+
+.one-message-container {
+  background: pink;
+  padding: 1rem;
+}
+
+select {
+  cursor: pointer;
+}
+
+.one-message-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.one-message-controls {
+  display: flex;
+  gap: 1rem;
 }
