--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,8 @@ body {
 }
 
 .App {
+  max-width: 800px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
 }
@@ -19,18 +21,41 @@ body {
   color: aqua;
   padding: 20px 0;
   font-size: 50px;
+  text-align: center;
 }
 
 .form-container {
-  background-color: rgb(154, 252, 255);
-  border: 3px solid rgb(100, 58, 58);
-  padding: 60px;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  padding: 2rem;
+  background-color: rgb(154, 252, 255);
 }
 
-label {
-  /* placeholder */
+form {
+  max-width: 60%;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  column-gap: 1rem;
+  row-gap: 0.5rem;
+}
+
+form label {
+  margin: auto 0;
+}
+
+form input {
+  padding: 4px 8px;
+}
+
+form button {
+  justify-self: end;
+  grid-column: 1 / 3;
+}
+
+form button:disabled {
+  background-color: hsla(0, 0%, 0%, 0.5);
 }
 
 .all-messages-container {
@@ -38,7 +63,7 @@ label {
   flex-direction: column;
   align-items: flex-start;
   gap: 1rem;
-  padding: 1rem;
+  padding: 2rem 1rem;
 }
 
 .all-messages-list {
@@ -72,7 +97,7 @@ label {
 button {
   border: none;
   border-radius: 20px;
-  padding: 8px 12px;
+  padding: 0.5rem 1rem;
   background-color: #7fffd4;
   cursor: pointer;
 }
@@ -82,12 +107,13 @@ button:hover {
 }
 
 .one-message-container {
+  padding: 2rem 1rem;
   background: pink;
-  padding: 1rem;
 }
 
 select {
   cursor: pointer;
+  padding: 0.25rem 0.5rem;
 }
 
 .one-message-container {
